--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EzTool-宜立資訊</title>
 </head>
-<body>
-    it's alive again.
+    <body>
+    <div id="App">
+       <a href="./Post/2020-03-29_FirstPost.md" >FirstPost</a>
+    </div>  
 </body>
 </html>
