--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
     <body>
     <div id="App">
-       <a href="./Post/2020-03-29_FirstPost.md" >FirstPost</a>
+       <a href="./Post/2020-03-29_FirstPost" >FirstPost</a>
     </div>  
 </body>
 </html>
