--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>EzTool-宜立資訊</title>
-</head>
-    <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.js"></script>
+  </head>
+  <body>
     <div id="App">
-       <a href="./Post/2020-03-29_FirstPost" >FirstPost</a>
-    </div>  
-</body>
+      <div v-for="i in 3">
+        <a href="./Post/2020-03-29_FirstPost">FirstPost</a>
+      </div>
+    </div>
+  </body>
 </html>
