--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <title>EzTool-宜立資訊</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.js"></script>
   </head>
-  <body>
-    <div id="app">
-      <a href="./Post/Web/2020-03-30_9999_000-開發環境">FirstPost</a>
-    </div>
+  <body>   
+    <div ><a href="./_site/index">test</a></div>
   </body>
   <script>
     var app = new Vue({ el: "#app" });
