--- a/toc.html
+++ b/toc.html
@@ -13,7 +13,7 @@
           
           <ul class="nav level1">
                 <li>
-                    <a href="articles/intro.html" name="articles/toc.html" title="Articles">Articles</a>
+                    <a href="articles/9999_000-%E9%96%8B%E7%99%BC%E7%92%B0%E5%A2%83.html" name="articles/toc.html" title="Articles">Articles</a>
                 </li>
                 <li>
                     <a href="api/index.html" name="api/toc.html" title="Api Documentation">Api Documentation</a>
