--- a/Articles_ACCOUNT/toc.html
+++ b/Articles_ACCOUNT/toc.html
@@ -13,13 +13,7 @@
           
           <ul class="nav level1">
                 <li>
-                    <a href="Articles_TECH/index.html" name="" title="&#25216;&#34899;&#25991;&#31456;">&#25216;&#34899;&#25991;&#31456;</a>
-                </li>
-                <li>
-                    <a href="Articles_ACCOUNT" name="" title="&#26371;&#35336;&#23560;&#26989;">&#26371;&#35336;&#23560;&#26989;</a>
-                </li>
-                <li>
-                    <a href="api/index.html" name="api/toc.html" title="Api Documentation">Api Documentation</a>
+                    <a href="index.html" name="" title="&#31532;&#38646;&#31687;">&#31532;&#38646;&#31687;</a>
                 </li>
           </ul>
       </div>
