--- a/toc.html
+++ b/toc.html
@@ -16,10 +16,10 @@
                     <a href="Articles_TECH/index.html" name="" title="&#25216;&#34899;&#25991;&#31456;">&#25216;&#34899;&#25991;&#31456;</a>
                 </li>
                 <li>
-                    <a href="Articles_ACCOUNT" name="" title="&#26371;&#35336;&#23560;&#26989;">&#26371;&#35336;&#23560;&#26989;</a>
+                    <a href="Articles_ACCOUNT/index.html" name="" title="&#26371;&#35336;&#23560;&#26989;">&#26371;&#35336;&#23560;&#26989;</a>
                 </li>
                 <li>
-                    <a href="api/index.html" name="api/toc.html" title="Api Documentation">Api Documentation</a>
+                    <a href="api/index.md" name="" title="Api Documentation">Api Documentation</a>
                 </li>
           </ul>
       </div>
