--- a/Articles_TECH/System/999_001.html
+++ b/Articles_TECH/System/999_001.html
@@ -70,7 +70,7 @@
 <h1 id="需求的條件">需求的條件</h1>
 
 <h2 id="開發流程形式">開發流程形式</h2>
-<pre><code>使用者說：「我要一個功能」，然後世界上就多了一套系統。
+<pre><code>使用者說：「要有系統」，然後就有了系統。
 </code></pre>
 <p>上面這句話所說的這種事情是不會發生的，每套系統的開發都要經過一連串的程序，才能從一場場的會議轉化為一個個的功能，而一連串的過程可以概分為兩種型式：</p>
 <ul>
