--- a/Articles_TECH/toc.html
+++ b/Articles_TECH/toc.html
@@ -38,6 +38,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="202004/202004_003_WPF2Vue.html" name="" title="&#24478; WPF &#21040; Vue.js">&#24478; WPF &#21040; Vue.js</a>
+                          </li>
+                          <li>
                               <a href="9998_001.html" name="" title="&#38568;&#25163;&#35352;">&#38568;&#25163;&#35352;</a>
                           </li>
                     </ul>
