--- a/Articles_TECH/9999_000-開發環境.html
+++ b/Articles_TECH/9999_000-開發環境.html
@@ -72,9 +72,13 @@
 <ul>
 <li><a href="https://code.visualstudio.com/">Visual Studio Code</a></li>
 <li><a href="https://nodejs.org/en/download/">Node.js</a></li>
+<li><a href="https://chrome.google.com/webstore/detail/vuejs-devtools/nhdogjmejiglipccpnnnanhbledajbpd">Vue.js devtools</a></li>
 </ul>
 <h2 id="visual-studio-code-extension">Visual Studio Code Extension</h2>
 <ul>
+<li><a href="https://marketplace.visualstudio.com/items?itemName=JakeWilson.vscode-cdnjs">cdnjs</a>: 搜尋 JS 套件名稱、版本，並直接引入 CDN 連結。</li>
+<li><a href="https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer">Live Server</a>: 可以 HTTP 啟動網站，更動程式碼會即時反應到畫面上( Hot Reload )。</li>
+<li><a href="https://marketplace.visualstudio.com/items?itemName=octref.vetur">Vetur</a>: Vue 開發工具，語法高亮、程式片段及自動補足。</li>
 <li><a href="https://marketplace.visualstudio.com/items?itemName=yuichinukiyama.vscode-preview-server">Preview on Web Server</a>: 提供即時的網頁檢視。</li>
 <li><a href="https://marketplace.visualstudio.com/items?itemName=CoenraadS.bracket-pair-colorizer">Bracket Pair Colorizer</a>: 將括號以不同顏色顯示。</li>
 <li><a href="https://marketplace.visualstudio.com/items?itemName=christian-kohler.path-intellisense">Path Intellisense</a>:提供相對路徑的自動建議。</li>
