--- a/Articles_TECH/toc.html
+++ b/Articles_TECH/toc.html
@@ -32,7 +32,7 @@
                     <ul class="nav level2">
                           <li>
                               <span class="expand-stub"></span>
-                              <a href="Tools/VSCode/_index.html" name="" title="Visual Studio SCode">Visual Studio SCode</a>
+                              <a href="Tools/VSCode/index.html" name="" title="Visual Studio SCode">Visual Studio SCode</a>
                               
                               <ul class="nav level3">
                                     <li>
